# atlantis-models

./: .gitignore  Keuzes opbouwen ondergrondmodel.docx  README.md  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  test.tiff
.github/workflows/: ci.yml
atmod/: __init__.py  base.py  build.py  build_forcings.py  merge.py  read.py  templates.py  utils.py  warnings.py
atmod/bro_models/: __init__.py  geology.py  soilmap.py  voxelmodels.py
atmod/download/: __init__.py  ahn.py  download.py  pdok_example.py  test.py  urls.py
atmod/preprocessing/: __init__.py  geology.py  process_models.py  process_soilmap.py  rasterize.py
examples/: combine_gtp_bodemkaart.py  create_model_old.py  example_build_model.ipynb  tgg_sri_workshop.ipynb  tgg_sri_workshop.py
src/atmod/: __init__.py  base.py  build.py  build_forcings.py  merge.py  mixins.py  read.py  templates.py  utils.py  warnings.py
src/atmod/bro_models/: __init__.py  geology.py  gtp_strat.py  nl3d_strat.py  soilmap.py  voxelmodels.py
src/atmod/download/: ahn.py  download.py
src/atmod/preprocessing/: __init__.py  process_models.py  process_soilmap.py  rasterize.py
tests/: conftest.py  test_base.py  test_build_forcings.py  test_combine_sources.py
