[metadata]
name = atmod
version = 0.1.0
author = Deltares
author_email = bas.knaake@deltares.nl
description = Easy workflow to build subsurface models for Atlantis subsurface modelling
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research/Consultans
    Topic :: Scientific/Engineering :: Geology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy <=1.24 # numba requirement
    pandas >=2.0.1
    pyarrow
    pyproj
	geopandas
    openpyxl
    shapely >=2.0.1
    rasterio
	xarray
    rioxarray
	dask
	numba
	owslib
    netcdf4
    h5netcdf
    matplotlib

[options.extras_require]
dev =
    black
    pytest
    pytest-cov
    ruff
    sphinx
    sphinx-rtd-theme
